--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-loader": "^2.4.5",
     "react-loader-advanced": "^1.7.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
